--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jthomas/smsbot.git"
+    "url": "git+https://github.com/ibmets/smsbot.git"
   }
 }
